# ATLAS

./: .gitignore  .mcp.json  CLAUDE.md  check_api.py  masterclass_transcript.txt  pyproject.toml  test_qwen_tts.py
.bridge/: current_voice.txt  metadata.txt  session_status.json  voice.txt
.claude/: USER_OPERATING_GUIDE.md  atlas-progress.json  critical-state.md  grade-a-benchmarks.md  handoff.md  handover-voice-api-pipeline.md  process-alignment-audit.md  settings.json
atlas/: __init__.py
config/: .env.example  Modelfile.atlas  canonical_values.json  exercises.json  routing.yaml  simplifier.json  voice-persona.md
data/: atlas.db
dev_tools/: __init__.py  capture_screen.ps1  hot_reload.py  screenshot.sh  state_exporter.py
docs/: API_SPECIFICATION.md  ARCHITECTURE_COMPARISON_R29.md  ATLAS_ARCHITECTURE_V2.md  BABY-BRAINS-LAUNCH-STRATEGY-JAN2026.md  BB_AUTOMATION_PLAN_V2.md  BROWSER_STEALTH_RESEARCH.md  COMPARISON_ATLAS_VS_JARVIS.md  Clawdbot Trend Analysis - Comprehensive .md  DECISIONS.md  DOCUMENTATION_UPDATE_GUIDE.md  FUTURE_VISION_LOCAL_AI_2026.md  HANDOVER_ACTIVITY_PIPELINE.md  HANDOVER_PHASE1_COMPLETE.md  HANDOVER_PHASE2_QC_HOOK.md  HANDOVER_PHASE3_PIPELINE.md  HANDOVER_PHASE_0.md  HANDOVER_PROMPT_ACTIVITY_PIPELINE.md  HANDOVER_QUALITY_AUDIT_PIPELINE.md  HANDOVER_R29_COMPLETE.md  HANDOVER_R29_HYBRID_ROUTING.md  HANDOVER_STREAMING_DEBUG.md  HANDOVER_TEMPLATE.md  HANDOVER_TIMEOUT_FIX.md  HANDOVER_VOICE_BRIDGE.md  HANDOVER_VOICE_LATENCY_TEST.md  HEALTH_ROUTINE.md  MASTER_IMPLEMENTATION_GUIDE.md  MASTER_PLAN.md  NEEDS_VERIFICATION.md  ORCHESTRATOR_HANDOVER.md  (+18 more)
(+418 files in other folders)
