[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS - Autonomous Life Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Squiz" }
]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "sqlite-vec>=0.1.6",
    "fastmcp>=0.1.0",
    "aiobreaker>=0.8.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
voice = [
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.17.0",
    "moonshine>=0.1.7",
    "silero-vad>=6.2.0",
    "sounddevice>=0.5.0",
    "faster-whisper>=1.0.0",
]
memory = [
    "sentence-transformers[onnx]>=2.2.0",
]

[project.scripts]
atlas-mcp = "atlas.mcp.server:main"
atlas-voice = "atlas.voice.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
